Copy suspend-strawman-2 over