@@ -1,4 +1,4 @@
-val scala3Version = "3.2.2"
+val scala3Version = "3.3.0-RC3"
 
 lazy val root = project
   .in(file("."))
@@ -7,6 +7,7 @@ lazy val root = project
     version := "0.1.0-SNAPSHOT",
 
     scalaVersion := scala3Version,
+    javaOptions += "--enable-preview --version 19",
 
     libraryDependencies += "org.scalameta" %% "munit" % "0.7.29" % Test
   )
